
Denora v1.5.0-git
-------------

Additions
13/11/04 Full support for ircu and nefarious channel mode +A/U
13/11/04 ModuleCreateConfigDirective() cleaner way to pass to moduleGetConfigDirective()
13/10/23 Adds m4 directory, the configure files are getting nasty, time to move macros where
         they belong.
13/10/21 Added regex.h to the build, core and modules can now use this to pattern 
         match with regular expressions. 
13/01/13 Added support for ircu's channel mode +R (was missing)


Changes
13/11/11 Moved do_umode() hack from 1.4.0 to the protocol like it should have been.
13/11/06 denora.sql no longer includes ison table data, all this is move to the ircd based
         sql files to remove extra columns that we will never set on that ircd.
13/11/03 ModData functions require you to call it with your modules name, since moddata structs
         were broken up until this point it shouldn't be a huge deal.
13/10/24 Removes some future features so 1.5 can roll
13/10/24 Removes Postgre from the code, was never used or really compiled for, maybe in the futre
13/10/22 Removed configure searches to embed perl in the code
13/10/17 Removed USE_RDB define from config, this was legacy Anope code for when rdb was an option.
13/05/31 Improved handling of KILL messages on InspIRCd
13/05/16 Do not free unallocated memory in InspIRCd protocol

Fixes
13/11/13 Denora can compile on Solairs/OpenIndian 
13/11/13 Fixed crash bug with nefarious ircds
13/11/05 Fixed rdb_init() if MySQL not found it returns a better error message.
13/11/04 Fixed chan_delete() it cleared c->sqlname before we called the rest of the clean up, made it the
         last member of the channel struct to be cleaned out.
13/11/01 Cleaned up the "nefarious" hack in do_umode(), no longer leaks memory and ANSI standard
         coding.
13/10/31 change_user_realname() escaped the user->realname field then called on rdb_escape() again
         in the query, thus leaking memory.